--- a/events.html
+++ b/events.html
@@ -30,7 +30,7 @@
                     </a></li>
                     <li><a href="events.html" class="link">EVENTS</a></li>
                     <li><a href="resources.html" class="link">RESOURCES</a></li>
-                    <li><a href="https://hhsclubwebsites.github.io/clubdirectory/" class="link">BACK TO DIRECTORY</a></li>
+                    <li><a href="https://www.homesteadhs.club/#" target="_blank" rel="noopener noreferrer" class="link">BACK TO DIRECTORY</a></li>
                     <li class="last-link"><a href="javascript:void(0);" class="icon" onclick="myFunction()">
                         <i class="fa fa-bars"></i>
                     </a></li>
